update connect PostgreSql config

--- a/Demo-Cart-With-DotNetMVC/Views/Shared/_Layout.cshtml
+++ b/Demo-Cart-With-DotNetMVC/Views/Shared/_Layout.cshtml
@@ -9,20 +9,20 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-primary border-bottom box-shadow mb-3">
             <div class="container">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">BOOK CART EXAMPLE </a>
+                <a class="navbar-brand text-white" asp-area="" asp-controller="Home" asp-action="Index">BOOK CART EXAMPLE </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
+                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-end flex-column-reverse">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="HomePage">Home</a>
+                            <a class="nav-link text-white" asp-area="" asp-controller="Home" asp-action="HomePage">Đăng nhập</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="ProductDetail">Product Detail</a>
+                            <a class="nav-link text-white" asp-area="" asp-controller="Home" asp-action="ProductDetail">Giỏ hàng</a>
                         </li>
                     </ul>
                 </div>
