--- a/Demo-Cart-With-DotNetMVC/Views/Product/ProductDetail.cshtml
+++ b/Demo-Cart-With-DotNetMVC/Views/Product/ProductDetail.cshtml
@@ -1,6 +1,42 @@
-﻿@{
-    ViewData["Title"] = "Privacy Policy";
-}
-<h1>@ViewData["Title"]</h1>
+﻿@model Demo_Cart_With_DotNetMVC.Models.BookModel
 
-<p>Use this page to detail your site's privacy policy.</p>
+@{
+    Layout = "~/Views/Shared/_Layout.cshtml";
+}
+
+<h1>Index</h1>
+
+<div>
+    <h4>BookModel</h4>
+    <hr />
+    <dl class="row">
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.book_id)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.book_id)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.book_name)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.book_name)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.book_author)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.book_author)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.price)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.price)
+        </dd>
+    </dl>
+</div>
+<div>
+    @Html.ActionLink("Edit", "Edit", new { /* id = Model.PrimaryKey */ }) |
+    <a asp-action="Index">Back to List</a>
+</div>
