--- a/Demo-Cart-With-DotNetMVC/Views/Login/LoginPage.cshtml
+++ b/Demo-Cart-With-DotNetMVC/Views/Login/LoginPage.cshtml
@@ -1,36 +1,31 @@
 ﻿@model Demo_Cart_With_DotNetMVC.Models.AccountModel
 
 @{
-    ViewData["Title"] = "LoginPage";
+    ViewData["Title"] = "Login";
+    var mes = TempData["ThongBao"] as string;
+
 }
 
 <h1>Trang đăng nhập</h1>
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="LoginPage">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+        @using (Html.BeginForm("Signin", "Auth", FormMethod.Post))
+        {
             <div class="form-group">
-                <label asp-for="userName" class="control-label">Tài khoản:</label>
-                <input asp-for="userName" class="form-control" />
-                <span asp-validation-for="userName" class="text-danger"></span>
+                <label for="userName" class="control-label">Tài khoản:</label>
+                <input id="userName" name="userName" class="form-control" />
             </div>
             <div class="form-group">
-                <label asp-for="passWord" class="control-label">Mật khẩu:</label>
-                <input asp-for="passWord" class="form-control" type="password"/>
-                <span asp-validation-for="passWord" class="text-danger"></span>
+                <label for="passWord" class="control-label">Mật khẩu:</label>
+                <input id="passWord" name="passWord" class="form-control" type="password" />
+                <span class="text-danger">@mes</span>
             </div>
+            
             <div class="form-group">
                 <input type="submit" value="Đăng nhập" class="btn btn-primary" />
             </div>
-        </form>
+        }
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
-
-@section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-}
