--- a/Demo-Cart-With-DotNetMVC/Views/Shared/_Layout.cshtml
+++ b/Demo-Cart-With-DotNetMVC/Views/Shared/_Layout.cshtml
@@ -1,17 +1,22 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
 <head>
+    @using Microsoft.AspNetCore.Http
+    @inject Microsoft.AspNetCore.Http.IHttpContextAccessor HttpContextAccessor
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - Demo Cart</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
+    <link rel="stylesheet" href="~/css/home.css" />
+    <link rel="stylesheet" href="~/css/ProductDetail.css" />
+    @*<link rel="stylesheet" href="~/css/Login.css" />*@
 </head>
 <body>
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-primary border-bottom box-shadow mb-3">
             <div class="container">
-                <a class="navbar-brand text-white" asp-area="" asp-controller="Home" asp-action="Index">BOOK CART EXAMPLE </a>
+                <a class="navbar-brand text-white" asp-area="" asp-controller="Home" asp-action="HomePage">BOOK CART EXAMPLE </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -19,7 +24,16 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-end flex-column-reverse">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-white" asp-area="" asp-controller="Home" asp-action="HomePage">Đăng nhập</a>
+                            @if (@HttpContextAccessor.HttpContext.Session.GetString("username") == null)
+                            {
+                                <a class="nav-link text-white" asp-area="" asp-controller="Auth" asp-action="Signin">Đăng nhập</a>
+
+                            }
+                            else
+                            {
+                                <a class="nav-link text-white" asp-area="" asp-controller="Auth" asp-action="Signout">Đăng xuất</a>
+
+                            }
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-white" asp-area="" asp-controller="Home" asp-action="ProductDetail">Giỏ hàng</a>
