--- a/Demo-Cart-With-DotNetMVC/Views/Product/ProductDetail.cshtml
+++ b/Demo-Cart-With-DotNetMVC/Views/Product/ProductDetail.cshtml
@@ -33,7 +33,7 @@
 
                 <h4 class="text-danger font-weight-bold">@Model.price VNĐ</h4>
                 <p class="text-muted">Số lượng tồn: <strong>30</strong></p>
-                <button type="button" id="btn-add-to-cart"
+                <button type="button" id="btn-add-to-cart" data-order-id="@Model.book_id"
                         class="btn btn-success wow tada">
                     <i class="fas fa-plus-circle"></i> Thêm giỏ hàng
                 </button>
@@ -60,21 +60,46 @@
     </div>
  </div>
 <script type="text/javascript">
+    //Lưu comment vào sessionStorage
     function saveComment() {
-    let value = document.getElementById("comment").value;
-        sessionStorage.setItem(@Model.book_id, value)
+        let value = document.getElementById("comment").value;
+        sessionStorage.setItem("recoverComment"+@Model.book_id, value)
 
     }
 
+    //Load lại comment từ sessionStorage, hàm này tự động chạy khi trang đc load
     (function loadComment() {
-        let value = sessionStorage.getItem(@Model.book_id);
+        let value = sessionStorage.getItem("recoverComment"+@Model.book_id);
         console.log(value)
         document.getElementById("comment").value = value;
     })()
 
+    //Clearn sessionStorage khi người dùng nhấn bình luận
     function onComment(){
-        sessionStorage.removeItem(@Model.book_id);
+        sessionStorage.removeItem("recoverComment"+@Model.book_id);
         document.getElementById("comment").value = "";
         alert("Bình luận thành công")
     }
+
+    $("#btn-add-to-cart").click(function (e) {
+        var bookId = $("#btn-add-to-cart").attr("data-order-id");
+        $.ajax({
+            type: "POST",
+            url: "/Cart/Order?bookId=" + bookId,
+            success: function (value) {
+                console.log(value)
+                alert("Thêm giỏ hàng thành công")
+            }, error: (er) => {
+                console.log(er.responseText)
+                if (er.status == 401) {
+                    const item = {
+                        book_id:@Model.book_id,
+                        book_name:"@Model.book_name",
+                        price:@Model.price
+                    }
+                    cart.addItem(item)
+                }
+            }
+        })
+    })
 </script>
