--- a/Demo-Cart-With-DotNetMVC/Views/Login/LoginPage.cshtml
+++ b/Demo-Cart-With-DotNetMVC/Views/Login/LoginPage.cshtml
@@ -23,7 +23,7 @@
             </div>
             
             <div class="form-group">
-                <input type="submit" value="Đăng nhập" class="btn btn-primary" />
+                <input type="submit" value="Đăng nhập" class="btn btn-primary" id="btn-login" />
             </div>
         }
     </div>
