--- a/Demo-Cart-With-DotNetMVC/Views/Shared/_Layout.cshtml
+++ b/Demo-Cart-With-DotNetMVC/Views/Shared/_Layout.cshtml
@@ -9,7 +9,10 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
     <link rel="stylesheet" href="~/css/home.css" />
+    <link rel="stylesheet" href="~/css/cart.css" />
     <link rel="stylesheet" href="~/css/ProductDetail.css" />
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="~/js/myLocalStorage.js"></script>
     @*<link rel="stylesheet" href="~/css/Login.css" />*@
 </head>
 <body>
@@ -27,16 +30,16 @@
                             @if (@HttpContextAccessor.HttpContext.Session.GetString("username") == null)
                             {
                                 <a class="nav-link text-white" asp-area="" asp-controller="Auth" asp-action="Signin">Đăng nhập</a>
-
                             }
                             else
                             {
                                 <a class="nav-link text-white" asp-area="" asp-controller="Auth" asp-action="Signout">Đăng xuất</a>
-
                             }
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-white" asp-area="" asp-controller="Home" asp-action="ProductDetail">Giỏ hàng</a>
+                        <li class="dropdown nav-item">
+                            <a href="#" class="dropdown-toggle nav-link text-white" onclick="ajaxAdapter.getCart()" data-toggle="dropdown" role="button" aria-expanded="false"> <span class="fa fa-gift bigicon"></span> Giỏ hàng<span class="caret"></span></a>
+                            <ul class="dropdown-menu dropdown-cart" id="dropdown-cart" role="menu">
+                            </ul>
                         </li>
                     </ul>
                 </div>
@@ -55,7 +58,10 @@
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
+
+    <script src="~/js/CartHandle.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+   
     <script src="~/js/site.js" asp-append-version="true"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
