update Bundle, Minify and Caching handle

--- a/Demo-Cart-With-DotNetMVC/Views/Home/HomePage.cshtml
+++ b/Demo-Cart-With-DotNetMVC/Views/Home/HomePage.cshtml
@@ -41,7 +41,7 @@
 
 
 <!--Modal: modalDiscount-->
-<script src="~/js/myCookie.js"></script>
+<script src="~/js/MyCookie.min.js"></script>
 <script type="text/javascript">
     if (getCookie("promo") !== "false") {
 
