--- a/Demo-Cart-With-DotNetMVC/Views/Product/ProductDetail.cshtml
+++ b/Demo-Cart-With-DotNetMVC/Views/Product/ProductDetail.cshtml
@@ -3,7 +3,7 @@
 @{
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
+<h3>@ViewBag.checkCache</h3>
 <div class="row mt-4 book-detail p-3 bg-white rounded">
     <div class="col-md-4 col-lg-4" style="text-align: center">
         <img style="height:100%;" class="card-img-top" src="/img/logo-mwg.png"
